Bind descriptor evidence to referenced JVM entries (#904)